--- a/ureport/templates/ureport/new_flag.html
+++ b/ureport/templates/ureport/new_flag.html
@@ -1,24 +1,25 @@
 {% extends "dashboard.html" %}
+{% load i18n %}
 
 {% block content %}
 <div class="module">
-    <h2>Add New flag</h2>
+    <h2>{% trans "Add New flag" %}</h2>
     <table>
         <form method="Post" >
    {{  flags_form.as_table }}
-           <tr><td> <input type="submit" name="submit" value="submit"></td></tr>
+           <tr><td> <input type="submit" name="submit" value="{% trans "submit" %}"></td></tr>
 </table>
 </form>
 </div>
     <div>
-    <h3>All Flags</h3>
+    <h3>{% trans "All Flags" %}</h3>
     <table width="100%">
-    <thead><tr><td>name</td> <td>messages</td> <td></td></tr></thead>
+    <thead><tr><td>{% trans "name" %}</td> <td>{% trans "messages" %}</td> <td></td></tr></thead>
     {% for flag in all_flags %}
 
-<tr><td>{{flag.name}}</td>  <td><a href="/flags/{{ flag.pk }}/messages/">messages</a></td>
-    <td><a href="/flags/{{ flag.pk }}/edit/">edit</a> </td>
-    <td><a href="/flags/{{ flag.pk }}/delete/">delete</a> </td></tr>
+<tr><td>{{flag.name}}</td>  <td><a href="/flags/{{ flag.pk }}/messages/">{% trans "messages" %}</a></td>
+    <td><a href="/flags/{{ flag.pk }}/edit/">{% trans "edit" %}</a> </td>
+    <td><a href="/flags/{{ flag.pk }}/delete/">{% trans "delete" %}</a> </td></tr>
     {% endfor %}
     </table>
     </div>
