--- a/ureport/templates/ureport/contact_message_base.html
+++ b/ureport/templates/ureport/contact_message_base.html
@@ -45,10 +45,10 @@
 
         {% endblock %}
 {% block content %}
-<a href="/massmessages/" style="font-size:12pt">Show Mass Messages |</a>
-<a href="/unsolicitized_messages/" style="font-size:12pt">Show Unsolicitized Messages |</a>
-<a href="/poll_messages/" style="font-size:12pt">Show Poll Messages |</a>
-<a href="/autoreg_messages/" style="font-size:12pt">Show Autoreg Messages |</a>
-<a href="/quitmessages/" style="font-size:12pt">Show Quit Messages |</a>
+<a href="/massmessages/" style="font-size:12pt">{% trans "Show Mass Messages" %} |</a>
+<a href="/unsolicitized_messages/" style="font-size:12pt">{% trans "Show Unsolicitized Messages" %} |</a>
+<a href="/poll_messages/" style="font-size:12pt">{% trans "Show Poll Messages" %} |</a>
+<a href="/autoreg_messages/" style="font-size:12pt">{% trans "Show Autoreg Messages" %} |</a>
+<a href="/quitmessages/" style="font-size:12pt">{% trans "Show Quit Messages" %} |</a>
 {{ block.super }}
 {% endblock %}
